# Chipolata

./: README.md  pyproject.toml  setup.cfg
src/chipolata/: base.py
