[metadata]
name = Chipolata
version = 0.1.0
author = Estéban Ristich (PowerSaucisse)
author_email = esteban.ristich@protonmail.com
description = Hight level secure and robust encryption librarie with post quantum signature
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PowerSaucisse/Chipolata
project_urls =
    Bug Tracker = https://github.com/PowerSaucisse/Chipolata/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src